--- a/frontend/src/app/core/layout/navbar/navbar.component.html
+++ b/frontend/src/app/core/layout/navbar/navbar.component.html
@@ -7,11 +7,11 @@
         <span class="spacer"></span>
 
         <div class="auth-buttons">
-            <button mat-button class="login-btn" routerLink="/login">
+            <button mat-button class="login-btn" [routerLink]="['/' + appRoutes.LOGIN]">
                 <mat-icon>login</mat-icon>
                 <span class="button-text">Iniciar Sesión</span>
             </button>
-            <button mat-raised-button class="register-btn" routerLink="/register">
+            <button mat-raised-button class="register-btn" [routerLink]="['/' + appRoutes.NEW_USER]">
                 <mat-icon>person_add</mat-icon>
                 <span class="button-text">Registrarse</span>
             </button>
