--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-navbar></app-navbar>
 
-<app-login></app-login>
+<div class="page">
+    <router-outlet></router-outlet>
+</div> 
 
 <app-footer></app-footer>
