--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,5 +1,14 @@
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; padding-top: 64px; padding-bottom: 64px;}
+html, body { 
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    overflow-y: auto; }
+
+body { 
+     font-family: Roboto, "Helvetica Neue", sans-serif; 
+    }
+
 :root {
     --color-principal: #0c2a55;
     --primary-button-bg: #26a69a;
@@ -10,10 +19,4 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; padding-top
     body {
         padding-top: 56px;
     }
-}
-
-html,
-body {
-    overflow-x: hidden;
-    width: 100%;
 }
