--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,12 +1,12 @@
-html, body { 
+html, body {
     height: 100%;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
     overflow-y: auto; }
 
-body { 
-     font-family: Roboto, "Helvetica Neue", sans-serif; 
+body {
+     font-family: Roboto, "Helvetica Neue", sans-serif;
     }
 
 :root {
@@ -19,4 +19,23 @@ body {
     body {
         padding-top: 56px;
     }
+}
+
+.toast-success {
+  background-color: #009688 !important;
+  border-radius: 10px !important;
+  box-shadow: 0 4px 12px rgba(0, 128, 0, 0.3) !important;
+}
+
+.toast-error {
+  background-color: var(--secondary-button-bg) !important;
+  color: white !important;
+  border-radius: 10px !important;
+  box-shadow: 0 4px 12px rgba(139, 0, 0, 0.4) !important;
+}
+
+.toast-warning {
+  background-color: #ffee58;
+  color: black;
+  font-size: 16px;
 }
