--- a/frontend/src/app/user/components/login/login.component.css
+++ b/frontend/src/app/user/components/login/login.component.css
@@ -3,9 +3,8 @@
     justify-content: center;
     align-items: center;
     min-height: calc(100vh - 128px);
-    /* Ajusta según el alto de tu navbar y footer */
     padding: 20px;
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
 }
 
 .login-card {
