--- a/frontend/src/app/core/layout/components/home/home.component.html
+++ b/frontend/src/app/core/layout/components/home/home.component.html
@@ -7,6 +7,6 @@
     <button type="button" routerLink="/login" class="start-button">Comenzar</button>
   </div>
   <div class="right-column">
-    <!-- Aquí puedes agregar una imagen más adelante -->
+    <img src="homepageimage.png" alt="home image" class="image">
   </div>
 </div>
