--- a/frontend/src/app/core/layout/components/footer/footer.component.html
+++ b/frontend/src/app/core/layout/components/footer/footer.component.html
@@ -1,3 +1,7 @@
-<mat-toolbar class="mat-elevation-z2 footer">
-    <span class="text"> ShiftWise footer</span>
+<mat-toolbar class="shiftwise-footer">
+  <div class="footer-brand">
+    <mat-icon class="brand-icon">schedule</mat-icon>
+    <span class="brand-text">ShiftWise</span>
+    <span class="brand-motto">• Gestión inteligente de turnos</span>
+  </div>
 </mat-toolbar>
