--- a/frontend/src/app/core/layout/components/navbar/navbar.component.html
+++ b/frontend/src/app/core/layout/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <mat-toolbar-row>
     <span class="title" routerLink="/">
-      <span>ShiftWise</span>
+      <span class="title">ShiftWise</span>
     </span>
     <span class="spacer"></span>
   </mat-toolbar-row>
