--- a/frontend/src/app/core/layout/components/home/home.component.html
+++ b/frontend/src/app/core/layout/components/home/home.component.html
@@ -23,7 +23,7 @@
         complicaciones.
       </p>
 
-      <button type="button" class="start-button">Comenzar</button>
+      <button routerLink="/login"  type="button" class="start-button">Comenzar</button>
     </div>
   </div>
 
