--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -56,7 +56,7 @@ body {
   margin: 15px auto;
   display: flex;
   flex-direction: row;
-  justify-content: right;
+  justify-content: center;
 }
 
 .btn-primary {
